<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/score_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:text="@string/title_activity_score"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_none_data"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toEndOf="@+id/score_title"
        app:layout_constraintTop_toTopOf="@+id/score_title" />

    <TextView
        android:id="@+id/title_submit_comment_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_submit_comment_score"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/ratingBar"
        app:layout_constraintStart_toStartOf="@+id/score_title"
        app:layout_constraintTop_toTopOf="@+id/ratingBar" />

    <RatingBar
        android:id="@+id/ratingBar"
        android:isIndicator="false"
        style="?attr/ratingBarStyleIndicator"
        android:rating="5.0"
        android:stepSize="0.5"
        android:progressTint="@color/yellow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"

        app:layout_constraintStart_toEndOf="@+id/title_submit_comment_score"
        app:layout_constraintTop_toBottomOf="@+id/score_title" />

    <EditText
        android:id="@+id/comment_input"
        android:layout_width="240dp"
        android:layout_height="80dp"
        android:padding="5dp"
        android:hint="@string/prompt_comment_input"
        android:inputType="text"
        android:gravity="start"
        android:elevation="6dp"
        android:background="@drawable/shape_rec_background_shadow"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@+id/score_title"
        app:layout_constraintTop_toBottomOf="@+id/ratingBar" />

    <Button
        android:id="@+id/comment_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_submit"
        android:layout_marginStart="20dp"
        android:textColor="@color/white"
        android:background="@drawable/selector_btn"
        app:layout_constraintBottom_toBottomOf="@+id/comment_input"
        app:layout_constraintStart_toEndOf="@+id/comment_input"
        app:layout_constraintTop_toTopOf="@+id/comment_input" />

    <View
        android:id="@+id/divider4"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@+id/recyclerView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/comment_input" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/comment_input" />

</androidx.constraintlayout.widget.ConstraintLayout>