<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <NumberPicker
        android:id="@+id/number_picker_year"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:descendantFocusability="blocksDescendants"
        app:layout_constraintEnd_toStartOf="@+id/text_view_year"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_view_year"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:gravity="center"
        android:text="@string/txt_year"
        app:layout_constraintEnd_toStartOf="@+id/number_picker_month"
        app:layout_constraintStart_toEndOf="@+id/number_picker_year"
        app:layout_constraintTop_toTopOf="@id/number_picker_year" />

    <NumberPicker
        android:id="@+id/number_picker_month"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:descendantFocusability="blocksDescendants"
        app:layout_constraintEnd_toStartOf="@+id/text_view_month"
        app:layout_constraintStart_toEndOf="@+id/text_view_year"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_view_month"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:gravity="center"
        android:text="@string/txt_month"
        app:layout_constraintEnd_toStartOf="@+id/number_picker_date"
        app:layout_constraintStart_toEndOf="@+id/number_picker_month"
        app:layout_constraintTop_toTopOf="@+id/text_view_year" />

    <NumberPicker
        android:id="@+id/number_picker_date"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:descendantFocusability="blocksDescendants"
        app:layout_constraintEnd_toStartOf="@+id/text_view_date"
        app:layout_constraintStart_toEndOf="@+id/text_view_month"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_view_date"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:gravity="center"
        android:text="@string/txt_date"
        app:layout_constraintEnd_toStartOf="@+id/number_picker_hour"
        app:layout_constraintStart_toEndOf="@+id/number_picker_date"
        app:layout_constraintTop_toTopOf="@+id/text_view_year" />

    <NumberPicker
        android:id="@+id/number_picker_hour"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:descendantFocusability="blocksDescendants"
        app:layout_constraintEnd_toStartOf="@+id/text_view_hour"
        app:layout_constraintStart_toEndOf="@+id/text_view_date"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_view_hour"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:gravity="center"
        android:text="@string/txt_time_symbol"
        app:layout_constraintEnd_toStartOf="@+id/number_picker_minute"
        app:layout_constraintStart_toEndOf="@+id/number_picker_hour"
        app:layout_constraintTop_toTopOf="@+id/text_view_year" />

    <NumberPicker
        android:id="@+id/number_picker_minute"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:descendantFocusability="blocksDescendants"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/text_view_hour"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>